--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   style="background-image: url(https://i.pinimg.com/564x/c3/8a/09/c38a093c28ada7dad7b48c53cf1cc336.jpg); background-size: 100%;">
   <h1 class="display-4">About Me!</h1>
   <div>
-
+  
     <p class="lead">An agile web developer with strong communication and collaboration skills. Obsessed with design, quality, and logical algorithms. Strongly motivated by learning about real world business problems that can be solved with technical solutions. Passionate about developing applications to make the web a more useful, efficient, organized and beautiful place. Human oriented in all things, I believe our presence on the web reflects our culture and humanity, as much as it does our business activity. With a decade in software development as a QA engineer, analyst, and scrum master; these early support skills have led me to a grounded and holistic approach to programming and coding. 
       <div>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
           href="https://github.com/claudialove" target="_blank" role="button">My Github</a>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
-          href="https://docs.google.com/document/d/1SxdTSPjo1Z7fA610wwMksUvZcVvxB2MLYCYZZZHlfsE/edit?usp=sharing" target="_blank"
+          href="https://docs.google.com/document/d/13bnRveTb1dNDCYIsI5MI2nIcxLIP1GDptkh8QUqy3-o/edit#heading=h.dor4ozctdbr3" target="_blank"
           role="button">My Resume</a>
         <a class="btn btn-primary btn-lg" style="background:rgb(168, 126, 168); border: 2px solid rgb(168, 126, 168); margin: 15px;"
           href="https://www.linkedin.com/in/claudia-petty-4198751a2/" target="_blank" role="button">My LinkedIn</a>
